[package]
name = "genetic_mazes_graphical"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetic_mazes_lib = {path = "genetic_mazes_lib"}
rand = "0.7.0"
ggez = "0.5.1"
rayon = "1.2.0"
nalgebra = "0.18.1"
smart-default = "0.5.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "iterator_vs_for_loop"
harness = false

[profile.bench]
lto=true

[profile.release]
lto=true

[profile.dev]
opt-level=1