[package]
name = "genetic_mazes_lib"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.12.1"
rand = "0.7.0"
pathfinding = "1.1.12"
rayon = "1.2.0"